2022-10-07T08:33:34Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3203369020
* notice: last 14d: unq all: 4 25
* notice: prev accum: outdated-unq outdated-all / unq all: 344 538 / 362 565
* notice: next accum: outdated-unq outdated-all / unq all: 344 538 / 361 563
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -1 -2 / +2 +3 -1 -2 / 1 1
* notice: removed / changed dates: [] / [2022-09-23]

2022-10-06T16:40:32Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3198910555
* notice: last 14d: unq all: 4 27
* notice: prev accum: outdated-unq outdated-all / unq all: 342 535 / 361 563
* notice: next accum: outdated-unq outdated-all / unq all: 344 538 / 362 565
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-09-22] / []

2022-10-06T08:34:19Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3195713347
* notice: last 14d: unq all: 4 28
* notice: prev accum: outdated-unq outdated-all / unq all: 342 535 / 362 565
* notice: next accum: outdated-unq outdated-all / unq all: 342 535 / 361 563
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -1 -2 / +2 +3 -1 -2 / 1 1
* notice: removed / changed dates: [] / [2022-09-22]

2022-10-06T02:11:50Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3194032348
* notice: last 14d: unq all: 4 30
* notice: prev accum: outdated-unq outdated-all / unq all: 341 533 / 361 563
* notice: next accum: outdated-unq outdated-all / unq all: 342 535 / 362 565
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [2022-09-21] / [2022-10-05]

2022-10-05T16:56:07Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3191166891