@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-10-07T08:33:34Z",
-  "count_outdated" : 538,
-  "uniques_outdated" : 344,
-  "count" : 563,
-  "uniques" : 361,
+  "timestamp" : "2022-10-08T02:06:40Z",
+  "count_outdated" : 541,
+  "uniques_outdated" : 346,
+  "count" : 565,
+  "uniques" : 362,
   "clones" : [
-    {
-      "timestamp": "2022-09-23T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-09-24T00:00:00Z",
       "count": 1,
