@@ -1,3 +1,11 @@
+2022-10-08T02:06:40Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3208750086
+* notice: last 14d: unq all: 4 24
+* notice: prev accum: outdated-unq outdated-all / unq all: 344 538 / 361 563
+* notice: next accum: outdated-unq outdated-all / unq all: 346 541 / 362 565
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-09-23] / []
+
 2022-10-07T08:33:34Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3203369020
 * notice: last 14d: unq all: 4 25
